Update after some testing.

--- a/esptest/platformio.ini
+++ b/esptest/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit MCP2515@^0.2.1
 	adafruit/Adafruit CAN@^0.2.1
