--- a/esptest/platformio.ini
+++ b/esptest/platformio.ini
@@ -8,12 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:featheresp32]
+[env:adafruit_feather_esp32_v2]
 platform = espressif32
-board = featheresp32
+board = adafruit_feather_esp32_v2
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit MCP2515@^0.2.1
 	adafruit/Adafruit CAN@^0.2.1
 	adafruit/Adafruit BusIO@^1.17.0
+	adafruit/SdFat - Adafruit Fork@^2.2.3
