Used example to set up pixelRGB. And RTC.

--- a/esptest/platformio.ini
+++ b/esptest/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 	adafruit/Adafruit CAN@^0.2.1
 	adafruit/Adafruit BusIO@^1.17.0
 	adafruit/SdFat - Adafruit Fork@^2.2.3
+	handmade0octopus/ESP32-TWAI-CAN@^1.0.1
+	adafruit/Adafruit NeoPixel@^1.12.5
+	adafruit/RTClib@^2.1.4
